--- a/index.html
+++ b/index.html
@@ -162,21 +162,23 @@
         flex-direction: column-reverse;
         align-items: flex-start;
       }
+
       nav {
         flex-direction: column;
         gap: 10px;
         margin-bottom: 10px;
       }
+
       .eyecatcher {
         flex-direction: column;
       }
+
       .hero-content {
         margin: 0 auto;
         clip-path: none;
       }
     }
-
-    @keyframes fadeSlideIn {
+      @keyframes fadeSlideIn {
       from {
         opacity: 0;
         transform: translateY(30px);
@@ -186,9 +188,131 @@
         transform: translateY(0);
       }
     }
-  </style>
+
+    .hero-content {
+      animation: fadeSlideIn 1s ease;
+    }
+
+</style>
 </head>
 <body>
-<!-- Inhalt folgt ggf. später -->
+
+  <header>
+    <nav>
+      <a href="#">Produkte</a>
+      <a href="#">Service</a>
+      <a href="#">Unternehmen</a>
+      <a href="#">Karriere</a>
+      <a href="#kontakt">Kontakt</a>
+    </nav>
+    <div class="logo">
+      <img src="img/40Jahre_Logo_RGB.svg" alt="digital ZEIT Logo" />
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="hero-slide active" style="background-image: url('img/0-Header-Zeiterfassung.jpg');"></div>
+    <div class="hero-slide" style="background-image: url('img/0-Header-Zutrittskontrolle.jpg');"></div>
+    <div class="hero-slide" style="background-image: url('img/0-Header-Betriebsdatenerfassung.jpg');"></div>
+    <div class="hero-slide" style="background-image: url('img/0-Header-Projektzeiterfassung-1.jpg');"></div>
+    <div class="hero-slide" style="background-image: url('img/0-Header-Personaleinsatzplanung.jpg');"></div>
+    <div class="hero-content" id="heroText">
+  <h1>Ihr Partner für digitale Erfassungslösungen.</h1>
+  <p>Ob Zeiterfassung, Betriebsdatenerfassung oder Maschinendaten – unsere modularen Systeme machen Digitalisierung einfach, sicher und leistungsstark.</p>
+  <a href="#" id="ctaBtn" style="display:inline-block;margin-top:30px;padding:18px 36px;font-size:1.1em;background-color:#a90052;color:#fff;text-decoration:none;border-radius:8px;font-weight:bold">Mehr erfahren</a>
+</div>
+  </section>
+
+  <section class="eyecatcher">
+    <div>
+      <h3>40+</h3>
+      <p>Jahre Erfahrung</p>
+    </div>
+    <div>
+      <h3>1300+</h3>
+      <p>aktive Kunden</p>
+    </div>
+    <div>
+      <h3>40</h3>
+      <p>Mitarbeiter</p>
+    </div>
+  </section>
+
+  <section class="referenzen">
+    <h2>Referenzen</h2>
+    <div class="referenzen-logos">
+      <img src="img/Burkhardt.jpg" alt="Burkhardt Fruchtsäfte" />
+      <img src="img/Noerpel.jpg" alt="Noerpel" />
+      <img src="img/Boerlind.png" alt="Annemarie Börlind" />
+      <img src="img/Settele.jpg" alt="Settele" />
+      <img src="img/Roma.jpg" alt="Roma" />
+      <img src="img/Halder.jpg" alt="Halder" />
+      <img src="img/Aviko.jpg" alt="Aviko" />
+      <img src="img/Eberle.jpg" alt="Eberle" />
+    </div>
+  </section>
+
+  <footer id="kontakt">
+    <a href="#" title="LinkedIn">👤</a>
+    <a href="#" title="Xing">👥</a>
+    <a href="#" title="YouTube">🎥</a>
+  </footer>
+
+  <script>
+    const slides = document.querySelectorAll('.hero-slide');
+    let current = 0;
+
+    setInterval(() => {
+  slides[current].classList.remove('active');
+  document.querySelector('.hero-content').style.animation = 'none';
+  void document.querySelector('.hero-content').offsetWidth;
+  document.querySelector('.hero-content').style.animation = 'fadeSlideIn 1s ease';
+      current = (current + 1) % slides.length;
+      slides[current].classList.add('active');
+    }, 5000);
+  // Text- und Button-Inhalte für jeden Slide
+const heroTexts = [
+  {
+    title: "Zeiterfassung neu gedacht.",
+    desc: "Digitale Lösungen für transparente und effiziente Arbeitszeiterfassung.",
+    cta: "Zeiterfassung entdecken"
+  },
+  {
+    title: "Zutritt sicher und einfach steuern.",
+    desc: "Smarte Zutrittskontrolle mit Karte, Transponder oder Smartphone.",
+    cta: "Zutrittssysteme ansehen"
+  },
+  {
+    title: "Maschinendaten effizient erfassen.",
+    desc: "Unsere BDE-Systeme verbinden Mensch und Maschine intelligent.",
+    cta: "BDE kennenlernen"
+  },
+  {
+    title: "Projektzeiten intelligent managen.",
+    desc: "Erfassen Sie Zeiten projektbezogen – transparent & nachvollziehbar.",
+    cta: "Projektzeiterfassung starten"
+  },
+  {
+    title: "Planung, die sich anpasst.",
+    desc: "Digitale Schicht- und Einsatzplanung für mehr Flexibilität.",
+    cta: "Einsatzplanung optimieren"
+  }
+];
+
+const titleEl = document.querySelector("#heroText h1");
+const descEl = document.querySelector("#heroText p");
+const btnEl = document.querySelector("#ctaBtn");
+
+setInterval(() => {
+  slides[current].classList.remove('active');
+  current = (current + 1) % slides.length;
+  slides[current].classList.add('active');
+
+  titleEl.textContent = heroTexts[current].title;
+  descEl.textContent = heroTexts[current].desc;
+  btnEl.textContent = heroTexts[current].cta;
+}, 5000);
+</script>
+
 </body>
 </html>
