--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       background-size: cover;
       background-position: center;
       opacity: 0;
-      transition: opacity 1s ease-in-out;
+      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
     }
 
     .hero-slide.active {
@@ -77,23 +77,25 @@
     }
 
     .hero-content {
-      position: relative;
-      z-index: 2;
-      max-width: 700px;
-      background: rgba(0, 0, 0, 0.75);
-      padding: 80px 60px;
-      margin-left: 80px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 80px;
+      margin-left: 0;
+      max-width: 100%;
+      background: rgba(0, 0, 0, 0.65);
       clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
       animation: fadeSlideIn 1s ease;
     }
 
     .hero-content h1 {
-      font-size: 2.4em;
-      margin-bottom: 0.5em;
+      font-size: 3em;
+      margin-bottom: 0.6em;
     }
 
     .hero-content p {
-      font-size: 1.2em;
+      font-size: 1.3em;
     }
 
     .hero-dots {
@@ -323,12 +325,14 @@
 
     const slideInterval = setInterval(() => {
       slides[current].classList.remove('active');
+  slides[current].style.transform = 'translateX(-100%)';
       document.querySelector('.hero-content').style.animation = 'none';
       void document.querySelector('.hero-content').offsetWidth;
       document.querySelector('.hero-content').style.animation = 'fadeSlideIn 1s ease';
       dotsContainer.children[current].classList.remove("active");
       current = (current + 1) % slides.length;
-      slides[current].classList.add('active');
+      slides[current].style.transform = 'translateX(0)';
+  slides[current].classList.add('active');
       dotsContainer.children[current].classList.add("active");
       titleEl.textContent = heroTexts[current].title;
       descEl.textContent = heroTexts[current].desc;
