--- a/index.html
+++ b/index.html
@@ -60,9 +60,16 @@
       align-items: center;
       color: var(--weiß);
     }
-
-    
-  transform: translateX(100%);
+    .hero-slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      opacity: 0;
+      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      transform: translateX(100%);
+    }
 
     .hero-slide.active {
       opacity: 1;
