--- a/index.html
+++ b/index.html
@@ -61,20 +61,23 @@
       color: var(--weiß);
     }
     .hero-slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      opacity: 0;
-      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-      transform: translateX(100%);
-    }
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+  transform: translateX(100%);
+}
 
     .hero-slide.active {
-      opacity: 1;
-      z-index: 1;
-    }
+  opacity: 1;
+  z-index: 1;
+  transform: translateX(0);
+  background-color: inherit;
+}
 
     .hero-content {
       height: 100%;
