--- a/index.html
+++ b/index.html
@@ -254,10 +254,13 @@ nav a:hover {
         <img src="img/40Jahre_Logo_RGB.svg" alt="digital ZEIT Logo" />
       </div>
     </div>
-    <nav></nav>
-    <div class="logo">
-      <img src="img/40Jahre_Logo_RGB.svg" alt="digital ZEIT Logo" />
-    </div>
+    <nav>
+      <a href="#">Produkte</a>
+      <a href="#">Service</a>
+      <a href="#">Unternehmen</a>
+      <a href="#">Karriere</a>
+      <a href="#kontakt">Kontakt</a>
+    </nav>
   </header>
 
   <section class="hero">
