--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       z-index: 1000;
     }
 
+    .topbar {
+      background-color: var(--weiß);
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 2px solid var(--grau);
+    }
+
     nav {
       display: flex;
       gap: 20px;
@@ -56,24 +65,25 @@
       align-items: center;
       color: var(--weiß);
     }
+
     .hero-slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0;
-  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-  transform: translateX(100%);
-}
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      opacity: 0;
+      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      transform: translateX(100%);
+    }
 
     .hero-slide.active {
-  opacity: 1;
-  z-index: 1;
-  transform: translateX(0);
-  background-color: inherit;
-}
+      opacity: 1;
+      z-index: 1;
+      transform: translateX(0);
+      background-color: inherit;
+    }
 
     .hero-content {
       height: 100%;
@@ -85,8 +95,8 @@
       max-width: 100%;
       background: rgba(0, 0, 0, 0.65);
       clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
-      transform: translateX(100%);
-      opacity: 0;
+      transform: translateX(0);
+      opacity: 1;
       transition: all 0.8s ease;
     }
 
@@ -184,68 +194,15 @@
     }
 
     @media (max-width: 768px) {
-      header {
-        flex-direction: column-reverse;
-        align-items: flex-start;
-      }
-
-      nav {
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 10px;
-      }
-
       .eyecatcher {
         flex-direction: column;
       }
-
       .hero-content {
         margin: 0 auto;
         clip-path: none;
       }
     }
-
-    @keyframes fadeSlideIn {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-  .topbar {
-      background-color: var(--weiß);
-      padding: 20px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 2px solid var(--grau);
-    }
-
-nav {
-      display: flex;
-      gap: 20px;
-      background-color: var(--schwarz);
-      padding: 10px 40px;
-    }
-
-nav a {
-      text-decoration: none;
-      color: var(--weiß);
-      font-weight: 500;
-    }
-
-nav a:hover {
-      color: var(--magenta);
-    }
-
-.logo img {
-      height: 50px;
-    }
-
-
+  </style>
 </head>
 <body>
   <header>
