--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       max-width: 100%;
       background: rgba(0, 0, 0, 0.65);
       clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
-      transform: translateX(0);
+      transform: none;
       opacity: 1;
-      transition: all 0.8s ease;
+      transition: none;
     }
 
     .hero-content h1 {
@@ -316,12 +316,7 @@
     const slideInterval = setInterval(() => {
       slides[current].classList.remove('active');
       slides[current].style.transform = 'translateX(-100%)';
-      document.querySelector('.hero-content').style.transform = 'translateX(100%)';
-      document.querySelector('.hero-content').style.opacity = '0';
-      setTimeout(() => {
-        document.querySelector('.hero-content').style.transform = 'translateX(0)';
-        document.querySelector('.hero-content').style.opacity = '1';
-      }, 100);
+      
       dotsContainer.children[current].classList.remove("active");
       current = (current + 1) % slides.length;
       slides[current].style.transform = 'translateX(0)';
