--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       display: flex;
       gap: 20px;
       background-color: var(--schwarz);
-      padding: 10px 40px;
+      padding: 20px 40px;
     }
 
     nav a {
@@ -58,6 +58,7 @@
     }
 
     .hero {
+      margin-top: 20px;
       position: relative;
       height: 75vh;
       overflow: hidden;
