--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>digital ZEIT GmbH</title>
   <link href="https://fonts.googleapis.com/css2?family=Univers&display=swap" rel="stylesheet">
-  <style>
-    :root {
+  <style>    :root {
       --magenta: #a90052;
       --grau: #545454;
       --weiß: #ffffff;
@@ -15,7 +14,7 @@
     }
 
     body {
-      font-family: "Univers", "Segoe UI", sans-serif;
+      font-family: \"Univers\", \"Segoe UI\", sans-serif;
       background-color: var(--weiß);
       color: var(--grau);
       margin: 0;
@@ -34,6 +33,7 @@
       justify-content: space-between;
       align-items: center;
       border-bottom: 2px solid var(--grau);
+      transition: opacity 0.3s ease;
     }
 
     nav {
@@ -201,8 +201,7 @@
         margin: 0 auto;
         clip-path: none;
       }
-    }
-  </style>
+    }</style>
 </head>
 <body>
   <header>
