--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>digital ZEIT GmbH</title>
   <link href="https://fonts.googleapis.com/css2?family=Univers&display=swap" rel="stylesheet">
-  <style>    :root {
+  <style>
+    :root {
       --magenta: #a90052;
       --grau: #545454;
       --weiß: #ffffff;
@@ -14,7 +15,7 @@
     }
 
     body {
-      font-family: \"Univers\", \"Segoe UI\", sans-serif;
+      font-family: "Univers", "Segoe UI", sans-serif;
       background-color: var(--weiß);
       color: var(--grau);
       margin: 0;
@@ -33,7 +34,6 @@
       justify-content: space-between;
       align-items: center;
       border-bottom: 2px solid var(--grau);
-      transition: opacity 0.3s ease;
     }
 
     nav {
@@ -58,10 +58,10 @@
     }
 
     .hero {
-      margin-top: 20px;
       position: relative;
       height: 75vh;
       overflow: hidden;
+      margin-top: 20px;
       display: flex;
       align-items: center;
       color: var(--weiß);
@@ -73,7 +73,6 @@
       height: 100%;
       background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
       opacity: 0;
       transition: opacity 1s ease-in-out, transform 1s ease-in-out;
       transform: translateX(100%);
@@ -83,7 +82,6 @@
       opacity: 1;
       z-index: 1;
       transform: translateX(0);
-      background-color: inherit;
     }
 
     .hero-content {
@@ -92,11 +90,8 @@
       flex-direction: column;
       justify-content: center;
       padding: 0 80px;
-      margin-left: 0;
-      max-width: 100%;
       background: rgba(0, 0, 0, 0.65);
-      clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
-      opacity: 0;
+      opacity: 1;
       transition: opacity 0.5s ease;
     }
 
@@ -116,7 +111,6 @@
       transform: translateX(-50%);
       display: flex;
       gap: 10px;
-      z-index: 3;
     }
 
     .hero-dots span {
@@ -125,83 +119,12 @@
       border-radius: 50%;
       background-color: rgba(169, 0, 82, 0.4);
       cursor: pointer;
-      transition: background-color 0.3s;
     }
 
     .hero-dots span.active {
       background-color: #a90052;
     }
-
-    .eyecatcher {
-      display: flex;
-      justify-content: space-around;
-      text-align: center;
-      padding: 40px 20px;
-      background-color: var(--weiß);
-    }
-
-    .eyecatcher div {
-      flex: 1;
-      padding: 20px;
-    }
-
-    .eyecatcher h3 {
-      font-size: 2em;
-      color: var(--magenta);
-    }
-
-    .eyecatcher p {
-      font-size: 1.1em;
-      color: var(--grau);
-    }
-
-    .referenzen {
-      padding: 60px 40px;
-      background-color: var(--hellgrau);
-      text-align: center;
-    }
-
-    .referenzen h2 {
-      font-size: 2.4em;
-      color: var(--magenta);
-      margin-bottom: 40px;
-    }
-
-    .referenzen-logos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    .referenzen-logos img {
-      width: 120px;
-      height: auto;
-      object-fit: contain;
-    }
-
-    footer {
-      background-color: var(--schwarz);
-      text-align: center;
-      padding: 20px;
-    }
-
-    footer a {
-      margin: 0 10px;
-      color: var(--weiß);
-      text-decoration: none;
-      font-size: 1.4em;
-    }
-
-    @media (max-width: 768px) {
-      .eyecatcher {
-        flex-direction: column;
-      }
-      .hero-content {
-        margin: 0 auto;
-        clip-path: none;
-      }
-    }</style>
+  </style>
 </head>
 <body>
   <header>
@@ -225,107 +148,36 @@
     <div class="hero-slide" style="background-image: url('img/0-Header-Betriebsdatenerfassung.jpg');"></div>
     <div class="hero-slide" style="background-image: url('img/0-Header-Projektzeiterfassung-1.jpg');"></div>
     <div class="hero-slide" style="background-image: url('img/0-Header-Personaleinsatzplanung.jpg');"></div>
-    <div class="hero-content" id="heroText">
+
+    <div class="hero-content active" id="heroText">
       <h1>Ihr Partner für digitale Erfassungslösungen.</h1>
       <p>Ob Zeiterfassung, Betriebsdatenerfassung oder Maschinendaten – unsere modularen Systeme machen Digitalisierung einfach, sicher und leistungsstark.</p>
-      <a href="#" id="ctaBtn" style="display:inline-block;margin-top:30px;padding:18px 36px;font-size:1.1em;background-color:#a90052;color:#fff;text-decoration:none;border-radius:8px;font-weight:bold">Mehr erfahren</a>
+      <a href="#" id="ctaBtn" style="margin-top:30px;padding:18px 36px;font-size:1.1em;background-color:#a90052;color:#fff;text-decoration:none;border-radius:8px;font-weight:bold">Mehr erfahren</a>
     </div>
     <div class="hero-dots" id="heroDots"></div>
   </section>
 
-  <section class="eyecatcher">
-    <div><h3>40+</h3><p>Jahre Erfahrung</p></div>
-    <div><h3>1300+</h3><p>aktive Kunden</p></div>
-    <div><h3>40</h3><p>Mitarbeiter</p></div>
-  </section>
-
-  <section class="referenzen">
-    <h2>Referenzen</h2>
-    <div class="referenzen-logos">
-      <img src="img/Burkhardt.jpg" alt="Burkhardt Fruchtsäfte" />
-      <img src="img/Noerpel.jpg" alt="Noerpel" />
-      <img src="img/Boerlind.png" alt="Annemarie Börlind" />
-      <img src="img/Settele.jpg" alt="Settele" />
-      <img src="img/Roma.jpg" alt="Roma" />
-      <img src="img/Halder.jpg" alt="Halder" />
-      <img src="img/Aviko.jpg" alt="Aviko" />
-      <img src="img/Eberle.jpg" alt="Eberle" />
-    </div>
-  </section>
-
-  <footer id="kontakt">
-    <a href="#" title="LinkedIn">👤</a>
-    <a href="#" title="Xing">👥</a>
-    <a href="#" title="YouTube">🎥</a>
-  </footer>
-
   <script>
     const slides = document.querySelectorAll('.hero-slide');
+    const heroContent = document.querySelector('.hero-content');
     let current = 0;
-    const heroTexts = [
-      {
-        title: "Zeiterfassung neu gedacht.",
-        desc: "Digitale Lösungen für transparente und effiziente Arbeitszeiterfassung.",
-        cta: "Zeiterfassung entdecken"
-      },
-      {
-        title: "Zutritt sicher und einfach steuern.",
-        desc: "Smarte Zutrittskontrolle mit Karte, Transponder oder Smartphone.",
-        cta: "Zutrittssysteme ansehen"
-      },
-      {
-        title: "Maschinendaten effizient erfassen.",
-        desc: "Unsere BDE-Systeme verbinden Mensch und Maschine intelligent.",
-        cta: "BDE kennenlernen"
-      },
-      {
-        title: "Projektzeiten intelligent managen.",
-        desc: "Erfassen Sie Zeiten projektbezogen – transparent & nachvollziehbar.",
-        cta: "Projektzeiterfassung starten"
-      },
-      {
-        title: "Planung, die sich anpasst.",
-        desc: "Digitale Schicht- und Einsatzplanung für mehr Flexibilität.",
-        cta: "Einsatzplanung optimieren"
-      }
-    ];
 
-    const titleEl = document.querySelector("#heroText h1");
-    const descEl = document.querySelector("#heroText p");
-    const btnEl = document.querySelector("#ctaBtn");
-    const dotsContainer = document.getElementById("heroDots");
+    function hideContent() {
+      heroContent.style.opacity = '0';
+    }
 
-    heroTexts.forEach((_, i) => {
-      const dot = document.createElement("span");
-      if (i === 0) dot.classList.add("active");
-      dot.addEventListener("click", () => {
-        clearInterval(slideInterval);
-        slides[current].classList.remove("active");
-        dotsContainer.children[current].classList.remove("active");
-        current = i;
-        slides[current].classList.add("active");
-        dotsContainer.children[current].classList.add("active");
-        titleEl.textContent = heroTexts[current].title;
-        descEl.textContent = heroTexts[current].desc;
-        btnEl.textContent = heroTexts[current].cta;
-      });
-      dotsContainer.appendChild(dot);
-    });
+    function showContent() {
+      heroContent.style.opacity = '1';
+    }
 
     const slideInterval = setInterval(() => {
       slides[current].classList.remove('active');
-      slides[current].style.transform = 'translateX(-100%)';
-      document.querySelector('.hero-content').style.opacity = '0';
-      
-      dotsContainer.children[current].classList.remove("active");
+      hideContent();
+
       current = (current + 1) % slides.length;
-      slides[current].style.transform = 'translateX(0)';
       slides[current].classList.add('active');
-      document.querySelector('.hero-content').style.opacity = '1';
-      dotsContainer.children[current].classList.add("active");
-      titleEl.textContent = heroTexts[current].title;
-      descEl.textContent = heroTexts[current].desc;
-      btnEl.textContent = heroTexts[current].cta;
+
+      setTimeout(showContent, 500);
     }, 5000);
   </script>
 </body>
